# forge

./: README.md  forge.schema.json  forge.yaml  profiles.default.yaml  providers.default.yaml  spoti.json  te.txt  todo  tu
.github/workflows/: ci.yml
crates/: LinkedList.cs  Program.cs  README.md  compute_natural_numbers.py  print_numbers.py
crates/forge_api/src/: api.rs  forge_api.rs  lib.rs
crates/forge_app/: Cargo.toml
crates/forge_app/src/: agent.rs  agent_executor.rs  app.rs  command_generator.rs  compact.rs  data_gen.rs  git_app.rs  operation.rs  orch.rs  services.rs  title_generator.rs  tool_executor.rs  tool_registry.rs  utils.rs  workflow_manager.rs
crates/forge_app/tests/: orchestrator_test_helpers.rs
crates/forge_display/: Cargo.toml
crates/forge_display/src/: lib.rs  markdown.rs
crates/forge_display/src/md/: ansi.rs  mod.rs  render.rs  writer.rs
crates/forge_domain/: Cargo.toml
crates/forge_domain/src/: chat_response.rs  conversation.rs  env.rs  lib.rs  message.rs  metrics.rs  provider.rs  result_stream_ext.rs  session_metrics.rs  tool_call_context.rs  tool_usage.rs  tools.rs  update.rs  workflow.rs
crates/forge_infra/src/: env.rs  executor.rs  fs_write.rs
crates/forge_main/: Cargo.toml
crates/forge_main/src/: banner.rs  editor.rs  info.rs  model.rs  ui.rs
crates/forge_main_neo/: Cargo.toml
crates/forge_main_neo/src/: executor.rs
crates/forge_spinner/: Cargo.toml
plans/: 2025-08-27-modify_files-v1.md
shell-plugin/: forge.plugin.zsh
templates/: forge-partial-tool-instructions.hbs  forge-partial-tool-required.hbs
(+44 files in other folders)
