[package]
name = "forge_display"
version = "0.1.0"
edition = "2024"

[dependencies]
derive_setters.workspace = true


similar.workspace = true
console.workspace = true
regex.workspace = true
termimad.workspace = true
syntect = "5.2"
lazy-regex = "3.0"

[dev-dependencies]
insta.workspace = true
pretty_assertions.workspace = true
strip-ansi-escapes.workspace = true
